fix: align ListingDetailHeader with detroit updates

--- a/src/page_components/listing/ListingDetailHeader.scss
+++ b/src/page_components/listing/ListingDetailHeader.scss
@@ -1,4 +1,3 @@
-// Listing Detail
 .detail-header {
   @apply relative;
   @apply pr-4;
@@ -8,6 +7,8 @@
   @apply border-b;
   @apply border-gray-400;
   @apply text-primary-darker;
+  @apply flex;
+  @apply justify-start;
 
   @screen md {
     @apply pt-0;
@@ -22,9 +23,18 @@
   @apply absolute;
   @apply w-12;
   @apply mr-2;
+  @apply ml-0;
 
   @screen md {
     @apply left-0;
+    @apply ml-1;
+  }
+}
+
+.detail-header__image-container {
+  width: auto;
+  [dir="rtl"] & {
+    width: var(--bloom-s14);
   }
 }
 
@@ -37,10 +47,19 @@
     @apply border-primary;
   }
 
+  [dir="rtl"] & {
+    margin-right: var(--bloom-s4);
+  }
+
   .ui-icon {
     @apply absolute;
     top: 1rem;
     right: 1rem;
+
+    [dir="rtl"] & {
+      left: 1rem;
+      right: auto;
+    }
 
     @screen md {
       @apply hidden;
@@ -71,23 +90,9 @@
 }
 
 .detail-header__subtitle {
-  @apply text-sm;
+  @apply text-tiny;
 
   @screen md {
-    @apply text-gray-750;
+    @apply text-gray-800;
   }
-}
-
-.toggle-header {
-  @apply bg-primary-light;
-  @apply p-4;
-  @apply border-b;
-  @apply border-primary;
-  display: flex;
-  justify-content: space-between;
-}
-.toggle-header-content {
-  @apply font-sans;
-  @apply text-sm;
-  @apply text-gray-800;
 }
